Fixed Navbar on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,12 +567,16 @@ footer {
 
   /* =============== START OF NAVBAR SECTION =============== */
   
-  nav {
+  nav, .headings {
     flex-direction: row;
     justify-content: space-between;
     order: 3;
     margin: 0;
     width: 90%;
+    display: flex;
+    align-items:center;
+    flex-wrap: wrap;
+    flex-basis: 100%;
   }
 
   #accommodations-nav {
